--- a/config/Snow_Input.ini
+++ b/config/Snow_Input.ini
@@ -1,6 +1,18 @@
 [Read_Data]
 Query=SELECT CURRENT_ROLE();
 [Load_Into_Stage]
-INTERNAL=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE:Order.csv
+INTERNAL1=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Order:Order.csv
+INTERNAL2=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Customer:Customer.xml
+INTERNAL3=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Order_Item:Order_Item.csv
+INTERNAL4=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Product:Product.json
+INTERNAL5=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Supplier:Supplier.json
+INTERNAL6=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Products:Products.csv
 [Trigger_Pipe_Ingest]
-SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.CSV_ORDER_PIPE:Order.csv.gz
+PIPE=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.CSV_ORDER_PIPE:Order.csv.gz
+[Cleanup_Stage]
+INTERNAL1=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Order:Order.csv
+INTERNAL2=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Customer:Customer.xml
+INTERNAL3=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Order_Item:Order_Item.csv
+INTERNAL4=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Product:Product.json
+INTERNAL5=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Supplier:Supplier.json
+INTERNAL6=SNOWFLAKE_ECOMMERCE.SCHEMA_ECOMMERCE.INTERNAL_STAGE/Products:Products.csv
